Bug 333890 - Don't change window width when Ctrl+S
Summary: Don't change window width when Ctrl+S
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.13
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-26 00:54 UTC by G360
Modified: 2014-05-09 12:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.13.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description G360 2014-04-26 00:54:45 UTC
The terminal window is too small, it grows to show the full message "Output has been suspended by pressing Ctrl+S ..." which is annoying as I don't like that window size.

Reproducible: Always




New since KDE apps and platforms 4.13
Comment 1 Kurt Hindenburg 2014-04-26 16:54:34 UTC
Git commit 24c90c36e72539aba5b24fb0639d02fc348be7a4 by Kurt Hindenburg.
Committed on 26/04/2014 at 16:53.
Pushed by hindenburg into branch 'master'.

Enable wordwrap on suspended message to avoid window resize
FIXED-IN: 2.13.1

M  +1    -0    src/TerminalDisplay.cpp

http://commits.kde.org/konsole/24c90c36e72539aba5b24fb0639d02fc348be7a4
Comment 2 Kurt Hindenburg 2014-04-26 16:59:29 UTC
Git commit 3d62d6a1e304c21124dab387609a480cb7883b4d by Kurt Hindenburg.
Committed on 26/04/2014 at 16:53.
Pushed by hindenburg into branch 'KDE/4.13'.

Enable wordwrap on suspended message to avoid window resize
FIXED-IN: 2.13.1
(cherry picked from commit 24c90c36e72539aba5b24fb0639d02fc348be7a4)

M  +1    -0    src/TerminalDisplay.cpp

http://commits.kde.org/konsole/3d62d6a1e304c21124dab387609a480cb7883b4d
Comment 3 G360 2014-04-26 19:10:38 UTC
Nice, thanks!
Comment 4 Kurt Hindenburg 2014-05-09 12:35:54 UTC
Git commit 57a5f23f1b163af7601f7db79c999a6d3473b9ee by Kurt Hindenburg.
Committed on 26/04/2014 at 16:53.
Pushed by hindenburg into branch 'frameworks'.

Enable wordwrap on suspended message to avoid window resize
FIXED-IN: 2.13.1
(cherry picked from commit 24c90c36e72539aba5b24fb0639d02fc348be7a4)

M  +1    -0    src/TerminalDisplay.cpp

http://commits.kde.org/konsole/57a5f23f1b163af7601f7db79c999a6d3473b9ee