Enable wordwrap on suspended message to avoid window resize

BUG: 333890
FIXED-IN: 2.13.1
(cherry picked from commit 24c90c36e72539aba5b24fb0639d02fc348be7a4)